--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <script defer src=""></script>
-  <title>Title</title>
+  <title>WDS Bootcamp</title>
 </head>
 <body>
+<header>
+  <nav>
+    <img src="img/wds_logo.png" alt="WDS Logo">
+    <ul>
+      <li><a href="#">Curriculum</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <h1>WDS Bootcamp</h1>
+  <span>From No Stack To Full Stack</span>
+  <a href="#">Learn More</a>
+  <img src="img/arrow_down.svg" alt="Scroll down icon">
+
+</header>
 
 </body>
 </html>
